# jackal-vk

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
meta/doxy/: CMakeLists.txt  Doxyfile.in
meta/policy/: directory structure.txt
meta/policy/git/: branching.html
meta/policy/git/branching_files/: C6AILKT.json
meta/policy/version/: versioning.html
meta/version/: bump-version.py
src/jkvk/: CMakeLists.txt  structure_chain.h  structure_wrappers.h  utility.h
